@@ -8,7 +8,10 @@ FIXED   issue when importing items that are linked to other items which contain 
 FIXED   bug in Nagios config importer where the first item was being skipped if there was a comment above it
 
 ADDED   icon preview to the OS details page
-ADDED	authentication configuration option LOG_REMOTE_IP_HISTORY
+ADDED   authentication configuration option LOG_REMOTE_IP_HISTORY
+ADDED   php-mysql check with proper message on INSTALL.php when not having mysql support.
+ADDED   sha1 password support for htpasswd file -> see sha_raw encryption mode
+
 CHANGED default behavior of multi-modify from "overwrite existing" to "add additional" (only for attributes that allow multiple values)
 
 Release 1.3.0 (2011-12-11)
